--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32718,6 +32718,57 @@ select {
           animation: bounce 1s infinite;
 }
 
+.btn-indigo {
+  --tw-bg-opacity: 1;
+  background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
+  border-radius: 0.25rem;
+  font-weight: 700;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+.btn-spinner,
+.btn-spinner:after {
+  border-radius: 50%;
+  width: 1.5em;
+  height: 1.5em;
+}
+
+.btn-spinner {
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: .2em solid white;
+  border-right: .2em solid white;
+  border-bottom: .2em solid white;
+  border-left: .2em solid transparent;
+  transform: translateZ(0);
+  -webkit-animation: spinning 1s infinite linear;
+          animation: spinning 1s infinite linear;
+}
+
+@-webkit-keyframes spinning {
+  0% { transform: rotate(0deg)
+  }
+
+  100% { transform: rotate(360deg)
+  }
+}
+
+@keyframes spinning {
+  0% { transform: rotate(0deg)
+  }
+
+  100% { transform: rotate(360deg)
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
